--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@
 --white-footer-60pr: #FFFFFF;
 
 --backgraund: #2F303A; 
---primery-btn-color: #F5F4FA;}
+--primery-btn-color: #F5F4FA;
+}
 
 body { 
 color: var(--primary-text-color); 
@@ -25,73 +26,187 @@ padding: 0;
 white-space: nowrap; 
 clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
  
-.container,
-.contact {
+.container {
 margin-left: auto;
 margin-right: auto;
-width: 1170px;
-outline: 2px solid mediumvioletred;
+width: 1200px;
+padding: 0 15px;
+outline: 1px solid mediumvioletred;
 }
 
-header {
-background-color: navajowhite;
-}
+
 /* logo */
 
 .logo-web {color: var(--akcent-color);}
 
-.logo {color: var(--logo-tekst); font-family: Raleway, sans-serif; font-size: 26px; line-height: 1.11; }
+.logo {
+    padding-top: 24px;
+    padding-bottom: 25px;
+    color: var(--logo-tekst); 
+    font-family: Raleway, sans-serif;
+    font-size: 26px; line-height: 1.11; }
 
 /* site nav */
 
+.nav,
+.site-nav,
+.contact {
+    display: flex;
+}
+.nav {
+    justify-content: space-between;
+    align-items: center;
+}
+.link {
+    padding-top: 32px;
+    padding-bottom: 32px;
 
-.site-nav .link {color: var(--title-text-color);}
+}
+.site-nav .link {
+    margin-left: 50px;
 
+    color: var(--title-text-color);
+}
 .site-nav .link:hover,
 .site-nav .link:focus {color: var(--akcent-color);}
 
 .site-nav .carent {color: var(--akcent-color);}
 
-.site-nav .contact { font-weight: 500; font-size: 14px; line-height: 1.14; letter-spacing: 0.02em;}
+.site-nav .contact { 
+    font-weight: 500; font-size: 14px; 
+    line-height: 1.14; 
+    letter-spacing: 0.02em;}
 
 /* adres */
 
-.contact .link {color: var(--primary-text-color);}
+/* .contact .link:last-child {
+    margin-left: 50px;
+} */
+
+.contact li:not(:last-child) {
+    margin-right: 50px;
+}
+.contact .link {
+    color: var(--primary-text-color);
+}
 
 .contact .link:hover, 
 .contact .link:focus {color: var(--akcent-color);}
 
 /* hero */
 
-.hero {background: var(--backgraund); }
+.hero {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    text-align: center;
+    background: var(--backgraund); 
+}
 
-.hero .hero-title {color: var(--hero-100pr); font-weight: 900; font-size: 44px; line-height: 1.36; text-align: center; letter-spacing: 0.06em;}
+.hero .hero-title {
+    margin-top: 0px;
+    margin-bottom: 40px;
+
+    color: var(--hero-100pr); 
+    font-weight: 900; 
+    font-size: 44px; 
+    line-height: 1.36; 
+    text-align: center; 
+    letter-spacing: 0.06em;}
 
 /* section */
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 
+.section.no-padding {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.feature-list
+.feature-list{
+    margin-top: 0;
+    margin-bottom: 0;
+}
 .section-title,
 .section .title,
 .section .item {color: var(--title-text-color);}
 
-.section .title {font-size: 14px; line-height: 1.4;}
+.section .title {
+    margin-top: 0;
+    margin-bottom: 40px;
 
-.section-title {font-size: 36px; line-height: 1.17; text-align: center;}
+    font-size: 14px; 
+    line-height: 1.4;}
 
-.section .desc {font-weight: 400; font-size: 14px; line-height: 1.71;}
+.section-title {
+    margin-top: 0;
+    margin-bottom: 50px;
+    font-size: 36px; 
+    line-height: 1.17;
+    text-align: center;
 
-.section .item {font-weight: 500; font-size: 16px; line-height: 1.9;}
+}
 
-.section .link {font-size: 16px; line-height: 1.9;}
+.section .desc {
+    margin-top: 0;
+    margin-bottom: 0;
+
+    font-weight: 400; 
+    font-size: 14px; 
+    line-height: 1.71;
+}
+
+.section .item {
+    margin-top: 30px;
+    margin-bottom: 10px;
+
+    font-weight: 500; 
+    font-size: 16px; 
+    line-height: 1.9;}
+
+.section .link {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
+
+    font-size: 16px; 
+    line-height: 1.9;
+}
+
+section.our {
+    background-color: var(--primery-btn-color);
+}
+
+.section-user {
+    margin-top: 0;
+    margin-bottom: 0;
+}
 
 /* footer */
-.footer {background: var(--backgraund);}
+.footer .logo {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-top: 60px;
+    margin-bottom: 20px;
+}
+.footer {
+    background: var(--backgraund);
+}
 
 .footer .logo, 
 .footer .items {color: var(--hero-100pr);}
 
 .adres .item {color: var(--white-footer-60pr);}
 
-.footer .contact {font-weight: normal; font-size: 14px; line-height: 1.71;}
+.footer .contact {
+margin-bottom: 9px;
+
+    font-weight: normal; 
+    font-size: 14px; 
+    line-height: 1.71;
+}
 
 /* button */
 .button {
