--- a/css/styles.css
+++ b/css/styles.css
@@ -34,48 +34,83 @@ padding: 0 15px;
 outline: 1px solid mediumvioletred;
 }
 
+/* main-nav */
+.header .main-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
+/* .link {
+    background-color: crimson;
+} */
 /* logo */
 
 .logo-web {color: var(--akcent-color);}
 
 .logo {
-    padding-top: 24px;
-    padding-bottom: 25px;
+    margin-top: 24px;
+    margin-bottom: 25px;
+
     color: var(--logo-tekst); 
     font-family: Raleway, sans-serif;
-    font-size: 26px; line-height: 1.11; }
+    font-size: 26px; 
+    line-height: 1.11; 
+}
 
 /* site nav */
 
-.nav,
-.site-nav,
-.contact {
-    display: flex;
-}
-.nav {
+
+ .site-nav {
+     display: flex;
+     margin-top: 0;
+     margin-bottom: 0;
+     padding-left: 0;
+ }
+ .site-nav .link {
+    display: block;
+    padding-top: 21px;
+    padding-bottom: 21px;
+ }
+/* .nav {
     justify-content: space-between;
     align-items: center;
-}
-.link {
-    padding-top: 32px;
-    padding-bottom: 32px;
+} */
 
+/* .link {
+    margin-top: 32px;
+    margin-bottom: 32px;
+
+} */
+.site-nav .nav-item + .nav-item {
+    margin-left: 50px;
 }
 .site-nav .link {
-    margin-left: 50px;
-
-    color: var(--title-text-color);
+     color: var(--title-text-color);
+    font-weight: 500; 
+    font-size: 14px; 
+    line-height: 1.14; 
+    letter-spacing: 0.02em;
 }
 .site-nav .link:hover,
 .site-nav .link:focus {color: var(--akcent-color);}
 
 .site-nav .carent {color: var(--akcent-color);}
 
-.site-nav .contact { 
-    font-weight: 500; font-size: 14px; 
+.contact { 
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    display: flex;
+
+    font-weight: 500; 
+    font-size: 14px; 
     line-height: 1.14; 
-    letter-spacing: 0.02em;}
+    letter-spacing: 0.02em;
+}
+.contact .links + .links {
+    margin-left: 50px;
+}
 
 /* adres */
 
@@ -83,9 +118,9 @@ outline: 1px solid mediumvioletred;
     margin-left: 50px;
 } */
 
-.contact li:not(:last-child) {
+/* .contact li:not(:last-child) {
     margin-right: 50px;
-}
+} */
 .contact .link {
     color: var(--primary-text-color);
 }
@@ -225,6 +260,15 @@ margin-bottom: 9px;
     align-items: center;
 }
 
+.title-btn {
+    display: flex;
+
+    padding-top: 94px;
+    padding-bottom: 50px;
+}
+.title-btn .btn-btn + .btn-btn {
+    margin-left: 8px;
+}
 .btn {
     display: inline-block;
     border-radius: 4px;
