--- a/css/styles.css
+++ b/css/styles.css
@@ -50,13 +50,14 @@ outline: 1px solid mediumvioletred;
 
 /* .nav-adress */
 .nav-adress { 
+    margin-left: auto;
+    display: flex;
     padding-top: 32px;
     padding-bottom: 32px;
     padding-left: 0;
     margin-top: 0;
     margin-bottom: 0;
-    margin-left: auto;
-    display: flex;
+
 
     font-weight: 500; 
     font-size: 14px; 
@@ -67,7 +68,7 @@ outline: 1px solid mediumvioletred;
 .site-nav {
     justify-content: space-between;
     align-items: center;
-
+    
     display: flex;
     margin-left: 93px;
     margin-top: 0;
@@ -78,10 +79,11 @@ outline: 1px solid mediumvioletred;
 
 .logo-web {color: var(--akcent-color);}
 
+.nav .logo {
+    padding-top: 24px;
+    padding-bottom: 25px;
+}
 .logo {
-    /* padding-top: 24px;
-    padding-bottom: 25px; */
-
     color: var(--logo-tekst); 
     font-family: Raleway, sans-serif;
     font-size: 26px; 
@@ -89,11 +91,11 @@ outline: 1px solid mediumvioletred;
 }
 
 /* site nav */
-.sait-nav .item {
+/* .sait-nav .item {
     justify-content: space-between;
     align-items: center;
     display: flex;
-}
+} */
 
 .site-nav .item +.item {
     margin-left: 50px;
